[package]
name = "vessel"
version = "0.7.0"
authors = ["DFINITY Stiftung (https://github.com/orgs/dfinity/teams/languages)"]
edition = "2018"
description = "A package manager for the Motoko programming language."
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1"
dhall = "0.12.0"
fern = { version = "0.7", features = ["colored"] }
flate2 = "1.1"
log = "0.4"
reqwest = { version = "0.12", features = ["blocking", "json"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_dhall = "0.12.0"
structopt = "0.3.26"
tar = "0.4"
tempfile = "3.19"
topological-sort = "0.2.2"
walkdir = "2.5"
